# stt-tts-unified

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  main.py
backend/routers/: history.py  settings.py  stt.py  tts.py
backend/services/: engine_factory.py  history_service.py  kokoro_service.py  protocols.py  settings_service.py  tts_service.py  whisper_service.py
backend/utils/: file_handler.py
docs/: api.md  architecture.md  development.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: history.ts  stt.ts  tts.ts
frontend/src/components/History/: HistoryItem.css  HistoryItem.tsx  HistoryPanel.css  HistoryPanel.tsx
frontend/src/components/Layout/: AppShell.css  AppShell.tsx
frontend/src/components/STT/: FileUpload.css  FileUpload.tsx  ProgressPoller.css  ProgressPoller.tsx  Recorder.css  Recorder.tsx  STTPanel.css  STTPanel.tsx
frontend/src/components/TTS/: TTSPanel.css  TTSPanel.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: detectLocale.ts
scripts/: dev.sh
